name:                editor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DanielWaterworth/editor
license:             BSD3
license-file:        LICENSE
author:              Daniel Waterworth
maintainer:          da.waterworth@gmail.com
copyright:           2016 Daniel Waterworth
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pretty
                       Printer
                       View
                       Modes
                       HZipper
                       TaggedZipper
                       UnfocusedListZipper
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts >= 1.18 && <1.19
                     , haskell-src-exts-prisms
                     , vty
                     , lens
                     , transformers
                     , mtl
                     , simple-zipper
                     , template-haskell
  default-language:    Haskell2010

executable e
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , editor
                     , haskell-src-exts >= 1.18 && <1.19
                     , haskell-src-exts-prisms
                     , vty
                     , lens
                     , transformers
                     , mtl
                     , simple-zipper
                     , template-haskell
  default-language:    Haskell2010

test-suite editor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , editor
                     , hspec
                     , haskell-src-exts >= 1.18 && <1.19
                     , haskell-src-exts-prisms
                     , vty
                     , lens
                     , transformers
                     , mtl
                     , simple-zipper
                     , template-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DanielWaterworth/editor
